completes datframe merging assignment

--- a/day1_markdown.html
+++ b/day1_markdown.html
@@ -125,7 +125,8 @@ $(document).ready(function () {
 <pre class="r"><code>setwd(&quot;~/repos/r_course/&quot;)
 mode(double)</code></pre>
 <pre><code>## [1] &quot;function&quot;</code></pre>
-<pre class="r"><code>library(knitr)
+<pre class="r"><code>library(car)
+library(knitr)
 library(dplyr)</code></pre>
 <pre><code>## 
 ## Attaching package: 'dplyr'</code></pre>
@@ -272,6 +273,128 @@ w_h[1] #display rows</code></pre>
 ## Ferrari Dino        175    5
 ## Maserati Bora       335    5
 ## Volvo 142E          109    4</code></pre>
+<pre class="r"><code>cars_data[23:27,] #rows 23 through 27 and all columns</code></pre>
+<pre><code>##                   mpg cyl  disp  hp drat    wt  qsec vs am gear carb
+## AMC Javelin      15.2   8 304.0 150 3.15 3.435 17.30  0  0    3    2
+## Camaro Z28       13.3   8 350.0 245 3.73 3.840 15.41  0  0    3    4
+## Pontiac Firebird 19.2   8 400.0 175 3.08 3.845 17.05  0  0    3    2
+## Fiat X1-9        27.3   4  79.0  66 4.08 1.935 18.90  1  1    4    1
+## Porsche 914-2    26.0   4 120.3  91 4.43 2.140 16.70  0  1    5    2</code></pre>
+<pre class="r"><code># library lookup
+cars_data[&quot;Ford Pantera L&quot;,&quot;gear&quot;] # display the number fo gears for a particular entry</code></pre>
+<pre><code>## [1] 5</code></pre>
+<pre class="r"><code># vector indexing can be forced to output a datframe subset by adding the option drop=FALSE
+#Exclusion indexing!
+cars_data[,-4,drop=FALSE]</code></pre>
+<pre><code>##                      mpg cyl  disp drat    wt  qsec vs am gear carb
+## Mazda RX4           21.0   6 160.0 3.90 2.620 16.46  0  1    4    4
+## Mazda RX4 Wag       21.0   6 160.0 3.90 2.875 17.02  0  1    4    4
+## Datsun 710          22.8   4 108.0 3.85 2.320 18.61  1  1    4    1
+## Hornet 4 Drive      21.4   6 258.0 3.08 3.215 19.44  1  0    3    1
+## Hornet Sportabout   18.7   8 360.0 3.15 3.440 17.02  0  0    3    2
+## Valiant             18.1   6 225.0 2.76 3.460 20.22  1  0    3    1
+## Duster 360          14.3   8 360.0 3.21 3.570 15.84  0  0    3    4
+## Merc 240D           24.4   4 146.7 3.69 3.190 20.00  1  0    4    2
+## Merc 230            22.8   4 140.8 3.92 3.150 22.90  1  0    4    2
+## Merc 280            19.2   6 167.6 3.92 3.440 18.30  1  0    4    4
+## Merc 280C           17.8   6 167.6 3.92 3.440 18.90  1  0    4    4
+## Merc 450SE          16.4   8 275.8 3.07 4.070 17.40  0  0    3    3
+## Merc 450SL          17.3   8 275.8 3.07 3.730 17.60  0  0    3    3
+## Merc 450SLC         15.2   8 275.8 3.07 3.780 18.00  0  0    3    3
+## Cadillac Fleetwood  10.4   8 472.0 2.93 5.250 17.98  0  0    3    4
+## Lincoln Continental 10.4   8 460.0 3.00 5.424 17.82  0  0    3    4
+## Chrysler Imperial   14.7   8 440.0 3.23 5.345 17.42  0  0    3    4
+## Fiat 128            32.4   4  78.7 4.08 2.200 19.47  1  1    4    1
+## Honda Civic         30.4   4  75.7 4.93 1.615 18.52  1  1    4    2
+## Toyota Corolla      33.9   4  71.1 4.22 1.835 19.90  1  1    4    1
+## Toyota Corona       21.5   4 120.1 3.70 2.465 20.01  1  0    3    1
+## Dodge Challenger    15.5   8 318.0 2.76 3.520 16.87  0  0    3    2
+## AMC Javelin         15.2   8 304.0 3.15 3.435 17.30  0  0    3    2
+## Camaro Z28          13.3   8 350.0 3.73 3.840 15.41  0  0    3    4
+## Pontiac Firebird    19.2   8 400.0 3.08 3.845 17.05  0  0    3    2
+## Fiat X1-9           27.3   4  79.0 4.08 1.935 18.90  1  1    4    1
+## Porsche 914-2       26.0   4 120.3 4.43 2.140 16.70  0  1    5    2
+## Lotus Europa        30.4   4  95.1 3.77 1.513 16.90  1  1    5    2
+## Ford Pantera L      15.8   8 351.0 4.22 3.170 14.50  0  1    5    4
+## Ferrari Dino        19.7   6 145.0 3.62 2.770 15.50  0  1    5    6
+## Maserati Bora       15.0   8 301.0 3.54 3.570 14.60  0  1    5    8
+## Volvo 142E          21.4   4 121.0 4.11 2.780 18.60  1  1    4    2</code></pre>
+<pre class="r"><code># specific excercise output
+oldFaithfulData[110:112,c(&quot;eruptions&quot;,&quot;waiting&quot;)]</code></pre>
+<pre><code>##     eruptions waiting
+## 110     3.683      81
+## 111     4.733      75
+## 112     2.300      59</code></pre>
+<pre class="r"><code>oldFaithfulData[110:112,&quot;waiting&quot;, drop(FALSE)]</code></pre>
+<pre><code>##     waiting
+## 110      81
+## 111      75
+## 112      59</code></pre>
+<pre class="r"><code>faithful2=oldFaithfulData
+names(faithful2)[2] = &quot;elapsedTime&quot;
+faithful2$eruptions[1:10]</code></pre>
+<pre><code>##  [1] 3.600 1.800 3.333 2.283 4.533 2.883 4.700 3.600 1.950 4.350</code></pre>
+<pre class="r"><code># logical operators &amp; | == != &gt; &lt; &gt;= &lt;=
+faithful2[faithful2$eruptions &gt; 4.9 &amp; faithful2$elapsedTime &gt;= 88,]</code></pre>
+<pre><code>##     eruptions elapsedTime
+## 86      4.933          88
+## 149     5.100          96
+## 168     5.000          88</code></pre>
+<pre class="r"><code># logical indexing IMPLIES | Logical OR
+head(faithful2[c(faithful2$eruptions &gt; 4.9, faithful2$elapsedTime &gt;= 88),],7)</code></pre>
+<pre><code>##     eruptions elapsedTime
+## 76      5.067          76
+## 86      4.933          88
+## 138     4.933          86
+## 149     5.100          96
+## 151     5.033          77
+## 168     5.000          88
+## 243     4.933          86</code></pre>
+<pre class="r"><code># change values for subsets (RECODE)</code></pre>
+<pre class="r"><code># merging and adding information to a dataframe
+dataFrameA = cars_data[,-c(5:7)] # remove certain columns
+dataFrameB = cars_data[,-5:-7] # remove the same columns a different way
+merge(dataFrameA,dataFrameB)</code></pre>
+<pre><code>##     mpg cyl  disp  hp vs am gear carb
+## 1  10.4   8 460.0 215  0  0    3    4
+## 2  10.4   8 472.0 205  0  0    3    4
+## 3  13.3   8 350.0 245  0  0    3    4
+## 4  14.3   8 360.0 245  0  0    3    4
+## 5  14.7   8 440.0 230  0  0    3    4
+## 6  15.0   8 301.0 335  0  1    5    8
+## 7  15.2   8 275.8 180  0  0    3    3
+## 8  15.2   8 304.0 150  0  0    3    2
+## 9  15.5   8 318.0 150  0  0    3    2
+## 10 15.8   8 351.0 264  0  1    5    4
+## 11 16.4   8 275.8 180  0  0    3    3
+## 12 17.3   8 275.8 180  0  0    3    3
+## 13 17.8   6 167.6 123  1  0    4    4
+## 14 18.1   6 225.0 105  1  0    3    1
+## 15 18.7   8 360.0 175  0  0    3    2
+## 16 19.2   6 167.6 123  1  0    4    4
+## 17 19.2   8 400.0 175  0  0    3    2
+## 18 19.7   6 145.0 175  0  1    5    6
+## 19 21.0   6 160.0 110  0  1    4    4
+## 20 21.0   6 160.0 110  0  1    4    4
+## 21 21.0   6 160.0 110  0  1    4    4
+## 22 21.0   6 160.0 110  0  1    4    4
+## 23 21.4   4 121.0 109  1  1    4    2
+## 24 21.4   6 258.0 110  1  0    3    1
+## 25 21.5   4 120.1  97  1  0    3    1
+## 26 22.8   4 108.0  93  1  1    4    1
+## 27 22.8   4 140.8  95  1  0    4    2
+## 28 24.4   4 146.7  62  1  0    4    2
+## 29 26.0   4 120.3  91  0  1    5    2
+## 30 27.3   4  79.0  66  1  1    4    1
+## 31 30.4   4  75.7  52  1  1    4    2
+## 32 30.4   4  95.1 113  1  1    5    2
+## 33 32.4   4  78.7  66  1  1    4    1
+## 34 33.9   4  71.1  65  1  1    4    1</code></pre>
+<pre class="r"><code>fCr &lt;- read.csv(&quot;./data/allcran_F.csv&quot;, header = TRUE, sep = &quot;,&quot;)
+mCr &lt;- read.csv(&quot;./data/allcran_M.csv&quot;, header = TRUE, sep = &quot;,&quot;)
+fCr[,&quot;sex&quot;] &lt;- &quot;F&quot;
+allCr &lt;- rbind(fCr,mCr)
+allCr$sex &lt;- factor(allCr$sex, labels = c(&quot;male&quot;,&quot;female&quot;), levels = c(&quot;M&quot;, &quot;F&quot;))</code></pre>
 
 
 
